--- a/lgtrex.html
+++ b/lgtrex.html
@@ -19,7 +19,7 @@
             <a-assets>
                 <a-asset-item
                     id="animated-asset"
-                    src="assets/asset.glb"
+                    src="assets/trex.glb"
                 ></a-asset-item>
             </a-assets>
 
