--- a/jardi.html
+++ b/jardi.html
@@ -28,10 +28,15 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     scale="0.1182217182918156 0.1182217182918156 0.1182217182918156"
-                    gps-entity-place="latitude: 41.68646924102982; longitude: 2.2875912055431726;"
+                    gps-entity-place="latitude: 41.68538468; longitude: 2.28628815;"					
                 ></a-entity>
 
             <a-camera gps-camera rotation-reader></a-camera>
         </a-scene>
     </body>
 </html>
+
+Altitude: 263 m AMSL
+
+Latitude: 41°41'11.397"N
+Longitude: 2°17'14.763"E
