--- a/multifoto.html
+++ b/multifoto.html
@@ -18,7 +18,7 @@
                     src="fotos/africa01.JPG"
                     look-at="[gps-camera]"
                     scale="1 1 1"
-                    gps-entity-place="latitude: 41.68538458; longitude: 2.28628805;"
+                    gps-entity-place="latitude: 41.686508; longitude: 2.287327;"
                 ></a-image>
                 <a-image
                     src="fotos/africa01.JPG"
