--- a/text.html
+++ b/text.html
@@ -19,7 +19,7 @@
         value="This content will always face you."
         look-at="[gps-camera]"
         scale="50 50 50"
-        gps-entity-place="latitude: 41.686508; longitude: 2.287327;"
+        gps-entity-place="latitude: 41.6865307; longitude: 2.2875160;"
       ></a-text>
       <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
